stlc-hs/testcases/stlc/ill-Typed/ifBranchTypeNotMatch.lam
if true then zero else false
